--- a/setup.cfg
+++ b/setup.cfg
@@ -59,7 +59,7 @@ exclude =
 [options.extras_require]
 # Add here additional requirements for extra features, to install with:
 # `pip install bandapi[PDF]` like:
-# PDF = ReportLab; RXP
+pymatgen = pymatgen
 
 # Add here test requirements (semicolon/line-separated)
 testing =
