New dispatch thing. Feature: - Add `Flow` for workflow control. - Add `AbacusFlow` for abacus task. More to be done. Bug Fix: - Fix `tmpfile` in matproj.py Example: - Add an simple example for scf calculation with dispatch.

--- a/setup.cfg
+++ b/setup.cfg
@@ -60,6 +60,7 @@ exclude =
 # Add here additional requirements for extra features, to install with:
 # `pip install bandapi[PDF]` like:
 pymatgen = pymatgen
+dp = dpdispatcher
 
 # Add here test requirements (semicolon/line-separated)
 testing =
