--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,8 @@ install_requires =
     importlib-metadata; python_version<"3.8"
     ase
     numpy
+    m2r
+    dpdispatcher
 
 
 [options.packages.find]
