--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,4 +2,8 @@
 # To build the module reference correctly, make sure every external package
 # under `install_requires` in `setup.cfg` is also listed here!
 sphinx>=3.2.1
+ase
+numpy
+m2r
+dpdispatcher
 # sphinx_rtd_theme
