Use states to manage the workflow. (#5)
* Restruction. Now we use state to manage the workflow.
Feature:
- Offer `state` now.
- Offer `task_content` now.

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,8 @@ install_requires =
     importlib-metadata; python_version<"3.8"
     ase
     numpy
+    m2r
+    dpdispatcher
 
 
 [options.packages.find]
@@ -60,7 +62,6 @@ exclude =
 # Add here additional requirements for extra features, to install with:
 # `pip install bandapi[PDF]` like:
 pymatgen = pymatgen
-dp = dpdispatcher
 
 # Add here test requirements (semicolon/line-separated)
 testing =
