--- a/setup.cfg
+++ b/setup.cfg
@@ -47,8 +47,10 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
-    ase;
+    ase
     numpy
+    m2r
+    dpdispatcher
 
 
 [options.packages.find]
@@ -59,7 +61,7 @@ exclude =
 [options.extras_require]
 # Add here additional requirements for extra features, to install with:
 # `pip install bandapi[PDF]` like:
-# PDF = ReportLab; RXP
+pymatgen = pymatgen
 
 # Add here test requirements (semicolon/line-separated)
 testing =
